# structo

./: !TODO.txt  .gitmodules  CMakeLists.txt  LICENSE  README.md  bounds.hpp  compat.hpp  contents.hpp  exceptions.hpp  fields.hpp  lang-api.hpp  primes.hpp  queries.hpp  rankers.hpp  structo.hpp
addon/: CMakeLists.txt
addon/stemka-api/: CMakeLists.txt  stemka-api.cpp
addon/stemka-api/src/: language-api.cpp  stemming-rus.cpp  stemming-ukr.cpp
addon/stemka-api/tests/: CMakeLists.txt  test-lang-stemka.cpp
context/: fields-man.hpp  index-keys.hpp  index-type.hpp  lemmatizer.hpp  pack-format.hpp  pack-images.hpp  processor.hpp  ranker-tag.hpp  text-image.hpp  x-contents.hpp
enquote/: quotations.hpp
indexer/: dynamic-contents.hpp  layered-contents.hpp  static-contents.hpp
queries/: builder.hpp  parser.hpp
samples/: CMakeLists.txt  quick-start.cpp  simple-index.cpp
src/: contents.cpp  primes.cpp
src/context/: fields-man.cpp  index-keys.cpp  lemmatizer.cpp  pack-format.cpp  pack-images.cpp  processor.cpp  x-contents.cpp
src/enquote/: quotations.cpp
src/indexer/: commit-contents.cpp  commit-contents.hpp  contents-index-merger.cpp  contents-index-merger.hpp  dynamic-bitmap.hpp  dynamic-chains-ringbuffer.hpp  dynamic-chains.hpp  dynamic-contents.cpp  dynamic-entities.hpp  index-layers.cpp  index-layers.hpp  layered-contents.cpp  merger-contents.cpp  merger-contents.hpp  notify-events.hpp  object-holders.hpp  override-entities.cpp  override-entities.hpp  patch-table.hpp  static-contents.cpp  static-entities.hpp  strmatch.cpp  strmatch.hpp
src/queries/: base-queries.cpp  base-queries.hpp  decompressor.hpp  field-set.hpp  mini-queries.cpp  parser.cpp  queries.cpp  query-terms.cpp  query-tools.cpp  query-tools.hpp  rich-queries.cpp  rich-rankers.cpp  rich-rankers.hpp
src/rankers/: bm25.cpp
src/storage/: linux-fs-output-direct.cpp  posix-fs-dump-store.cpp  posix-fs-dump-store.hpp  posix-fs-output.cpp  posix-fs-policies.cpp  posix-fs-serial.cpp  posix-fs-storage.cpp
storage/: posix-fs.hpp
tests/: CMakeLists.txt  test-main.cpp
tests/context/: test-contents.cpp  test-fields-manager.cpp  test-key.cpp  test-processor.cpp  test-tag-compressor.cpp
tests/enquote/: test-quote.cpp
tests/indexer/: test-commit-contents.cpp  test-contents-helpers.hpp  test-dynamic-chains-ringbuffer.cpp  test-dynamic-chains.cpp  test-dynamic-contents.cpp  test-dynamic-entities.cpp  test-index-layers.cpp  test-layered-contents.cpp  test-patch-table.cpp  test-static-contents.cpp  test-static-entities.cpp  test-stream-indexing.cpp
tests/queries/: test-mini-queries.cpp  test-queries-parser.cpp  test-rich-queries.cpp
tests/storage/: test-storage-fs-based.cpp
tests/toolbox/: dirtool.cpp  dirtool.h  tmppath.cpp  tmppath.h
utils/: CMakeLists.txt  index-check.cpp  index-query.cpp  index-stats.cpp  merge-indices.cpp
